Lambda API Gateway V2 Handler: Use .get(0) instead of .getFirst() for Java 17 compatibility.